samples/_failures_safe/1761488743_7c0630_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b225d883.c: In function ‘main’:
./samples/SAFE/__tmp_b225d883.c:158:28: error: missing terminating " character
  158 |                     printf("Error: Matrices
      |                            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b225d883.c:158:21: error: expected expression at end of input
  158 |                     printf("Error: Matrices
      |                     ^~~~~~
./samples/SAFE/__tmp_b225d883.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b225d883.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b225d883.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b225d883.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b225d883.c:158:21: error: expected declaration or statement at end of input
